--- a/JavaScript/network-test.html
+++ b/JavaScript/network-test.html
@@ -5,6 +5,9 @@
 	</head>
 	<body>
 		<div> error message: </div>
+		<br />
+		<br />
+		<div>message from server: </div><br />
 		<div id="test"></div>
 	</body>
 </html>
