--- a/IOS/GearsGameCenter/GearsGameCenter/Games/Maze/network-test.html
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/Maze/network-test.html
@@ -9,5 +9,10 @@
 		<br />
 		<div>message from server: </div><br />
 		<div id="test"></div>
+		<script>
+			function recievedCallBack(object) {
+				alert(object.message1);
+			}
+		</script>
 	</body>
 </html>
