--- a/Games/WhoIs/Game.html
+++ b/Games/WhoIs/Game.html
@@ -52,7 +52,7 @@
 	function ReadyButtonClick(){
 		
 		document.getElementsByTagName("p")[0].removeAttribute("hidden");
-		var name=document.getElementById("Username").text;
+		var name=document.getElementById("Username").value;
 		
 		UserIsReady(name);
 	}
