--- a/Games/WhoIs/Game.html
+++ b/Games/WhoIs/Game.html
@@ -73,6 +73,7 @@
 		Ulist.innerHTML='';
 			
 		for(var user in userList){
+			console.log(user);
 			Ulist.innerHTML+="<li><button onclick='"+"ListItemClick("+user.Username+")"+"'>"+user.Username+"</button></li>";
 
 
