--- a/Games/WhoIs/Game.html
+++ b/Games/WhoIs/Game.html
@@ -72,7 +72,8 @@
 		var Ulist= document.getElementById("UsersList");
 		Ulist.innerHTML='';
 			
-		for(var user in userList){
+		for(var index in userList){
+			var user=userList[index];
 			console.log(user);
 			Ulist.innerHTML+="<li><button onclick='"+"ListItemClick("+user.Username+")"+"'>"+user.Username+"</button></li>";
 
@@ -94,7 +95,7 @@
 			var user;
 			for(var j=0;j<userList.length;j++){
 				if (userList[j].Rank==i+1) {
-					user=userList[j]
+					user=userList[j];
 
 				 };
 			}
