--- a/Games/WhoIs/Game.html
+++ b/Games/WhoIs/Game.html
@@ -11,11 +11,7 @@
 
 		<button onclick="StartButtonClick()" >Start</button>
 		<p hidden>Waiting for other players...</p>
-		<div class="UsersListHolder"> 
-			<ul id="UsersReadyList">
-				<li>haha</li>
-			</ul>
-		</div>
+
 	</div>
 	<div id="GameOn" hidden>
 		<div class="QuestionHolder"> 
@@ -37,7 +33,9 @@
 				<li>haha</li>
 			</ol>
 		</div>
-		<button onclick="ReadyButtonClick()">Next</button>
+		<button onclick="ReadyButtonClick()" >Ready</button>
+
+		<button onclick="StartButtonClick()" >Start</button>
 
 	</div>
 </body>
