add image to page

--- a/Games/WhoIs/Game.html
+++ b/Games/WhoIs/Game.html
@@ -3,7 +3,8 @@
 	<script type="text/javascript" src="whois.js"></script>
 	<script type="text/javascript" src="client-network_backup.js"></script>
 </head>
-<body>
+<body bgcolor='#000000'>
+	<img src="who_is.png" alt="WHO IS?">
 	<div id="GameEnter">
 		<label>Name:</label>
 		<input id="Username" type="text"><br>
