--- a/Games/WhoIs/Game.html
+++ b/Games/WhoIs/Game.html
@@ -4,7 +4,7 @@
 	<script type="text/javascript" src="client-network.js"></script>
 </head>
 <body>
-	<div id="GameEnter">
+	<div id="GameEnter" class="center">
 		<label>Name:</label>
 		<input id="Username" type="text"><br>
 		<button id="ReadyButton" onclick="ReadyButtonClick()" >Ready</button>
