--- a/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
@@ -2,9 +2,10 @@
 <head>
 	<script type="text/javascript" src="whois.js"></script>
 	<script type="text/javascript" src="client-network.js"></script>
+	<link rel="stylesheet" type="text/css" href="game.css">
 </head>
 <body>
-	<div id="GameEnter">
+	<div id="GameEnter" class="center">
 		<label>Name:</label>
 		<input id="Username" type="text"><br>
 		<button id="ReadyButton" onclick="ReadyButtonClick()" >Ready</button>
@@ -13,7 +14,7 @@
 		<p hidden>Waiting for other players...</p>
 
 	</div>
-	<div id="GameOn" hidden>
+	<div id="GameOn" class="center" hidden>
 		<div class="QuestionHolder"> 
 			<h3>Answer it</h3>
 		</div>
@@ -24,7 +25,7 @@
 		</div>
 
 	</div>
-	<div id="GameResult" hidden>
+	<div id="GameResult" class="center" hidden>
 		<div class="QuestionHolder">
 			<h3>Answer it</h3>
 		</div>
