--- a/Games/WhoIs/Game.html
+++ b/Games/WhoIs/Game.html
@@ -151,7 +151,7 @@
 		
 	}*/
 	function SubmitVoteButtonClick(){
-		var username = GetCheckedRadioName(name);
+		var username = GetCheckedRadioName("votelist");
 		answerQuestion(name);
 		DeactivateButton("SubmitVoteButton");
 
