--- a/Games/WhoIs/Game.html
+++ b/Games/WhoIs/Game.html
@@ -152,7 +152,7 @@
 	}*/
 	function SubmitVoteButtonClick(){
 		var username = GetCheckedRadioName("votelist");
-		answerQuestion(name);
+		answerQuestion(username);
 		DeactivateButton("SubmitVoteButton");
 
 	}
