--- a/Games/WhoIs/Game.html
+++ b/Games/WhoIs/Game.html
@@ -104,7 +104,7 @@
 			console.log(user);
 			//Ulist.innerHTML+="<li><button onclick='"+'ListItemClick("'+user.Username+'")'+"'>"+user.Username+"</button></li>";
 
-			Ulist.innerHTML+='<li><input type="radio" name="votelist" vlaue='+user.Username+'/>'+user.Username+'</li>'
+			Ulist.innerHTML+='<li><input type="radio" name="voteList" value="'+user.Username+'"/>'+user.Username+'</li>'
 		}
 
 
@@ -151,7 +151,7 @@
 		
 	}*/
 	function SubmitVoteButtonClick(){
-		var username = GetCheckedRadioName("votelist");
+		var username = GetCheckedRadioName("voteList");
 		answerQuestion(username);
 		DeactivateButton("SubmitVoteButton");
 
