--- a/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
@@ -1,41 +1,49 @@
 <html>
 <head>
 	<script type="text/javascript" src="whois.js"></script>
-	<script type="text/javascript" src="client-network.js"></script>
+	<script type="text/javascript" src="gamecenter.js"></script>
+	<link rel="stylesheet" type="text/css" href="game.css">
 </head>
-<body>
-	<div id="GameEnter">
-		<label>Name:</label>
-		<input id="Username" type="text"><br>
-		<button id="ReadyButton" onclick="ReadyButtonClick()" >Ready</button>
-
-		<button id="StartButton" onclick="StartButtonClick()" hidden>Start</button>
-		<p hidden>Waiting for other players...</p>
+<body bgcolor='#000000'>
+	<img src="who_is.png" alt="WHO IS?">
+	<div id="GameEnter" class="center">
+        <div class="center">
+			<label>Name:</label>
+			<input id="Username" type="text"><br>
+        </div>
+        <div class="center">
+			<button id="ReadyButton" onclick="ReadyButtonClick()" >Ready</button>
+		</div>
+        <div class="center">
+			<button id="StartButton" onclick="StartButtonClick()" hidden>Start</button>
+        </div>
+		<p name="waitingMsg" hidden>Waiting for other players...</p>
 
 	</div>
-	<div id="GameOn" hidden>
+	<div id="GameOn" class="center" hidden>
 		<div class="QuestionHolder"> 
-			<h3>Answer it</h3>
+			<h3 name="question">Answer it</h3>
 		</div>
 		<div class="UsersListHolder"> 
 			<ul id="UsersList">
 				<li>haha</li>
 			</ul>
 		</div>
+		<button id='SubmitVoteButton' onclick="SubmitVoteButtonClick()" >Submit </button>
 
 	</div>
-	<div id="GameResult" hidden>
+	<div id="GameResult" class="center" hidden>
 		<div class="QuestionHolder">
-			<h3>Answer it</h3>
+			<h3 name="question">Answer it</h3>
 		</div>
 		<div class="UsersListHolder">
 			<ol id="UsersRankList">
 				<li>haha</li>
 			</ol>
 		</div>
-		<button onclick="ReadyButtonClick()" >Ready</button>
+		<button id="Result-ReadyButton" onclick="ReadyButtonClick()" >Ready</button>
 
-		<button onclick="StartButtonClick()" >Start</button>
+		<button id="Result-StartButton" onclick="StartButtonClick()" >Start</button>
 
 	</div>
 </body>
@@ -46,38 +54,51 @@
 	}
 	function StartButtonClick(){
 		startGame();
-		var startBut= document.getElementById("StartButton");
-		startBut.setAttribute("hidden",true);
+		HideItemById("StartButton");
+		HideItemById("Result-StartButton");
+
 	}
 	function ReadyButtonClick(){
 		
-		document.getElementsByTagName("p")[0].removeAttribute("hidden");
+
+		document.getElementsByName("waitingMsg")[0].removeAttribute("hidden");
+		
 		var name=document.getElementById("Username").value;
 	
-		var rdyBut = document.getElementById("ReadyButton");
-	
-		rdyBut.setAttribute("disabled",true);
+
+		DeactivateButton("ReadyButton");
+		DeactivateButton("Result-ReadyButton");
+
 		UserIsReady(name);
 		
 		
 		
 	}
 	function EnableStartButton(){
-		var startBut= document.getElementById("StartButton");
-			startBut.removeAttribute("hidden");
+		
+		RevealItemById("StartButton");
+		RevealItemById("Result-StartButton");
 	}
 	function DisplayQuestion(){
+		var questionStr = GetQuestion();
+		ActivateButton("SubmitVoteButton");
+	
 		//GetUsersList()
 		//{Username:'Greg',Rank:1,Count:3}
 
 		// cleaer View
-		document.getElementById("GameResult").setAttribute("hidden",true);
-		document.getElementById("GameEnter").setAttribute("hidden",true);
+		HideItemById("GameEnter");
+		HideItemById("GameResult");
 
-		
+		document.getElementsByName("waitingMsg")[0].setAttribute("hidden", true);
+		//HideItemById("")
+		RevealItemById("GameOn");
+		//questionText= document.getElementById("GetQuestion");
+		var questiontags = document.getElementsByName("question");
+		for(var i in questiontags){
+			questiontags[i].innerHTML=questionStr;
+		}
 
-		document.getElementById("GameOn").removeAttribute("hidden");
-		document.getElementsByTagName("p")[0].setAttribute("hidden", true);
 
 
 		var userList = GetGameUsersList();
@@ -87,22 +108,24 @@
 		for(var index in userList){
 			var user=userList[index];
 			console.log(user);
-			Ulist.innerHTML+="<li><button onclick='"+"ListItemClick("+user.Username+")"+"'>"+user.Username+"</button></li>";
+			//Ulist.innerHTML+="<li><button onclick='"+'ListItemClick("'+user.Username+'")'+"'>"+user.Username+"</button></li>";
 
+			Ulist.innerHTML+='<li><input type="radio" name="votelist" vlaue='+user.Username+'/>'+user.Username+'</li>'
 		}
+
+
+
 	};
 	function DisplayResults(){
 		//hide previouse view and display new view
 		document.getElementById("GameOn").setAttribute("hidden",true);
 		document.getElementById("GameResult").removeAttribute("hidden");
-		document.getElementsByTagName("button").removeAttribute("disabled");
+		//document.getElementsByTagName("button").removeAttribute("disabled");
 
-		document.getElementsByTagName("button").setAttribute("disabled",true);
-		var buttons = document.getElementsByTagName("button");
-		for(var index in buttons){
-			console.log(buttons[index]);
-			buttons[index].setAttribute("disabled",true);
-		}
+		//document.getElementsByTagName("button").setAttribute("disabled",true);
+
+		ActivateButton("Result-StartButton");
+		ActivateButton("Result-ReadyButton");
 
 		var userList = GetGameUsersList();
 		var Ulist= document.getElementById("UsersRankList");
@@ -121,17 +144,60 @@
 		}
 
 	}
+	/*
 	function ListItemClick(name){
 		answerQuestion(name);
 		//document.getElementsByTagName("button").setAttribute("disabled",true);
 		var buttons = document.getElementsByTagName("button");
 		for(var index in buttons){
+			console.log(index);
 			buttons[index].removeAttribute("disabled");
 
 		}
 		
+	}*/
+	function SubmitVoteButtonClick(){
+		var username = GetCheckedRadioName(name);
+		answerQuestion(name);
+		DeactivateButton("SubmitVoteButton");
+
 	}
-	
+
+
+
+	//helper functions
+	function GetCheckedRadioName(name) {
+	    var elements = document.getElementsByName(name);
+
+	    for (var i=0, len=elements.length; i<len; ++i){
+	    	if (elements[i].checked) 
+	    		return elements[i].value;
+
+	    }
+	        
+	}
+	function ActivateButton(id){
+		var element = document.getElementById(id);
+		element.removeAttribute("disabled");
+	}
+	function DeactivateButton(id){
+		var element = document.getElementById(id);
+		
+		element.setAttribute("disabled",true);
+
+	}
+	function HideItemById(id){
+		var element = document.getElementById(id)
+		element.setAttribute("hidden",true);
+
+	}
+	function RevealItemById(id){
+		var element = document.getElementById(id)
+		element.removeAttribute("hidden");
+	}
+
+
+
 
 	//should be implement in whois.hs
 
