--- a/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
@@ -112,7 +112,7 @@
 
 
 
-		var userList = GetGameUsersList();
+		// var userList = GetGameUsersList();
 		var Ulist= document.getElementById("UsersList");
 		Ulist.innerHTML='';
 			
