--- a/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
@@ -164,6 +164,7 @@
 
 		ActivateButton("Result-StartButton");
 		ActivateButton("Result-ReadyButton");
+		RevealItemById("Result-ReadyButton");
 
 		var userList = GetGameUsersList();
 		var Ulist= document.getElementById("UsersRankList");
