--- a/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
@@ -105,8 +105,8 @@
 	}
 	function EnableStartButton(){
 		
-		RevealItemById("StartButton");
-		RevealItemById("Result-StartButton");
+		ActivateButton("StartButton");
+		ActivateButton("Result-StartButton");
 		RevealItemById("ReadyButton");
 		RevealItemById("Result-ReadyButton");
 
@@ -162,7 +162,7 @@
 
 		//document.getElementsByTagName("button").setAttribute("disabled",true);
 
-		ActivateButton("Result-StartButton");
+		//ActivateButton("Result-StartButton");
 		ActivateButton("Result-ReadyButton");
 		RevealItemById("Result-ReadyButton");
 
