--- a/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
@@ -19,7 +19,7 @@
 			<p name="waitingMsg" hidden>Waiting for other players...</p>
 			<div class="UserListContainer">
 				<div class="UsersListHolder"> 
-				<ul id="ReadyUserList">
+				<ul name="ReadyUserList">
 
 					
 				</ul>
@@ -54,6 +54,12 @@
 					<li>haha</li>
 				</ol>
 			</div>
+			<div class="UserListContainer">
+				<div class="UsersListHolder"> 
+				<ul name="ReadyUserList">
+					
+				</ul>
+			</div>
 			<button id="Result-ReadyButton" class="btn-center" onclick="ReadyButtonClick()" >Ready</button>
 
 			<button id="Result-StartButton" class="btn-center" onclick="StartButtonClick()" >Start</button>
@@ -74,12 +80,23 @@
 			console.log(user);
 			//Ulist.innerHTML+="<li><button onclick='"+'ListItemClick("'+user.Username+'")'+"'>"+user.Username+"</button></li>";
 
-			Ulist.innerHTML+='<li>'+user.name+'</li>'
+			Ulist.innerHTML+='<li>'+user.name+'-Ready</li>'
 		}
 
 	}
 	function UpdateReadyList(){
 		var readyLists=document.getElementsByName("ReadyUserList");
+		var userList = UserList;
+
+		for (var i = readyLists.length - 1; i >= 0; i--) {
+			readyLists[i].innerHTML = "";
+		}
+		for (var i = userList.length - 1; i >= 0; i--) {
+			var user=userList[i];
+			for (var j = readyLists.length - 1; j >= 0; j--) {
+				readyLists[j].innerHTML += '<li>'+user.name+' - Ready</li>'
+			};
+		};
 
 	}
 	function StartButtonClick(){
