--- a/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
@@ -99,6 +99,14 @@
 		};
 
 	}
+	function ClearReadyList(){
+		var readyLists=document.getElementsByName("ReadyUserList");
+		
+
+		for (var i = readyLists.length - 1; i >= 0; i--) {
+			readyLists[i].innerHTML = "";
+		}
+	}
 	function StartButtonClick(){
 		startGame();
 		HideItemById("StartButton");
@@ -114,8 +122,8 @@
 		var name=document.getElementById("Username").value;
 	
 
-		DeactivateButton("ReadyButton");
-		DeactivateButton("Result-ReadyButton");
+//		DeactivateButton("ReadyButton");
+//		DeactivateButton("Result-ReadyButton");
 		HideItemById("ReadyButton");
 		HideItemById("Result-ReadyButton");
 
@@ -126,8 +134,8 @@
 	}
 	function EnableStartButton(){
 		
-		ActivateButton("StartButton");
-		ActivateButton("Result-StartButton");
+		//ActivateButton("StartButton");
+		//ActivateButton("Result-StartButton");
 		RevealItemById("StartButton");
 		RevealItemById("Result-StartButton");
 
@@ -202,6 +210,7 @@
 			Ulist.innerHTML+="<li>"+user.Username+" vote:"+user.Count+"</li>";
 
 		}
+		ClearReadyList();
 
 	}
 	/*
