--- a/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
@@ -188,7 +188,7 @@
 			console.log(user);
 			//Ulist.innerHTML+="<li><button onclick='"+'ListItemClick("'+user.Username+'")'+"'>"+user.Username+"</button></li>";
 		
-				Ulist.innerHTML+='<li><input type="radio" name="voteList" value="'+user.Username+'"/>'+user.Username+'</li>'
+				Ulist.innerHTML+='<li name="voteListItem" value="'+user.Username+'" onclick="ListItemClick(this)"/>'+user.Username+'</li>'
 		}
 
 
@@ -237,7 +237,9 @@
 		
 	}*/
 	function SubmitVoteButtonClick(){
-		var username = GetCheckedRadioName("voteList");
+		//var username = GetCheckedRadioName("voteList");
+		var username= GetSelectedVoteListItemByName("voteListItem").value;
+
 		answerQuestion(username);
 		DeactivateButton("SubmitVoteButton");
 		HideItemById("SubmitVoteButton");
@@ -247,6 +249,16 @@
 
 
 	//helper functions
+	function GetSelectedVoteListItemByName(name){
+		var elements = document.getElementsByName(name);
+		for (var i = elements.length - 1; i >= 0; i--) {
+			if(elements[i].className=="selected"){
+				return elements[i];
+			}
+		};
+		return null;
+
+	}
 	function GetCheckedRadioName(name) {
 	    var elements = document.getElementsByName(name);
 
@@ -277,7 +289,19 @@
 		element.removeAttribute("hidden");
 	}
 
+	function ListItemClick(elem){
+		var name=elem.getAttribute("name");
+		console.log("nadfasdfasdfasdfasdfasdfa:"+name);
+		var selectedItem= GetSelectedVoteListItemByName(name);
+		console.log(selectedItem);
+		if(selectedItem!=null){
+			selectedItem.className="";
+		}
+		
+		elem.className = "selected";
+		
 
+	}
 
 
 	//should be implement in whois.hs
