Helper.js added

--- a/Games/Mafia/index.html
+++ b/Games/Mafia/index.html
@@ -1,7 +1,8 @@
 <html>
 	<head>
-		<script type="text/javascript" src="sizzle.min.js"></script>
+		
 		<script type="text/javascript" src="Config.js"></script>
+		<script type="text/javascript" src="Helper.js"></script>
 		<script type="text/javascript" src="Game.js"></script>
 		<script type="text/javascript" src="GameData.js"></script>
 		<script type="text/javascript" src="Render.js"></script>
