--- a/Games/Mafia/index.html
+++ b/Games/Mafia/index.html
@@ -2,6 +2,7 @@
 	<head>
 		
 		<script type="text/javascript" src="Config.js"></script>
+		<script type="text/javascript" src="gamecenter.js"></script>
 		<script type="text/javascript" src="Helper.js"></script>
 		<script type="text/javascript" src="Game.js"></script>
 		<script type="text/javascript" src="GameData.js"></script>
@@ -70,6 +71,7 @@ window.onload=function(){
 	//SET THINGS UP
 	renderStage();
 	generateClientId();
+	connect = new GameCenter();
 }
 </script>
 <style type="text/css">
