bug fix & css fix

--- a/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
@@ -18,10 +18,10 @@
 			</div>
 			<div id="numChooser" hidden>
 				<select id="numQuestion">
-					<option value="1">01</option>
-					<option value="5">05</option>
-					<option value="10">10</option>
-					<option value="20">20</option>
+					<option value="1">01&nbsp;</option>
+					<option value="5">05&nbsp;</option>
+					<option value="10">10&nbsp;</option>
+					<option value="20">20&nbsp;</option>
 				</select>
 				<p name="numChooserHint"> questions to play.</p>
 			</div>
