--- a/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
@@ -124,7 +124,7 @@
 	function UpdateNotAnsweredList(){
 		//TODO
 		var message = "Still waiting for ";
-		var waitingHint=document.getElementsByName("waitingHint");
+		var waitingHint=document.getElementById("waitingHint");
 		var userList = GameUserList;
 		var users = [];
 
