--- a/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
@@ -77,6 +77,9 @@
 
 		</div>
 	</div>
+	<audio hidden id="ding">
+  		<source src="./mp3/ding.mp3" type="audio/mpeg">
+	</audio>
 </body>
 <script type="text/javascript">
 	
@@ -270,7 +273,9 @@
 
 		}
 		ClearReadyList();
-
+		
+		var soundEffect = document.getElementById("ding");
+		soundEffect.play();
 	}
 	
 	function DisplayGameEntry(){
