--- a/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/index.html
@@ -278,9 +278,12 @@
 		var soundEffect = document.getElementById("ding");
 		soundEffect.load();
 		soundEffect.play();
-		*/
-		var audio = new Audio('./mp3/ding.mp3');
+		//*/
+		
+		//*
+		var audio = new Audio('./mp3/ding.wav');
 		audio.play();
+		//*/
 	}
 	
 	function DisplayGameEntry(){
